--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
                         android:id="@+id/tablayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/orange"
+                        android:background="?attr/colorPrimary"
                         android:textAlignment="center"
                         android:layout_marginHorizontal="@dimen/_20sdp"
                         app:layout_constraintEnd_toEndOf="parent"
