--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -79,7 +79,7 @@
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:padding">@dimen/_15sdp</item>
-        <item name="drawableTint">?colorPrimary</item>
+        <item name="drawableTint">?attr/colorPrimaryVariant</item>
     </style>
 
     <style name="SettingsGroupTitleTextViewStyle">
@@ -104,21 +104,22 @@
         <item name="android:windowCloseOnTouchOutside">true</item>
         <item name="android:windowFullscreen">true</item>
         <item name="marginHorizontal">@dimen/_10sdp</item>
-        <item name="colorAccent">?attr/colorPrimary</item>
+        <item name="colorAccent">?attr/colorPrimaryVariant</item>
     </style>
 
     <style name="roundedCornersImageView" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/_10sdp</item>
         <item name="strokeWidth">@dimen/_2sdp</item>
-        <item name="strokeColor">?attr/colorPrimary</item>
+        <item name="strokeColor">?colorPrimary</item>
+        <item name="colorAccent">?attr/colorPrimary</item>
     </style>
 
     <style name="AppBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
         <item name="bottomSheetStyle">@style/AppModalStyle</item>
         <item name="android:windowSoftInputMode">adjustResize</item>
-        <item name="colorAccent">?attr/colorPrimary</item>
+        <item name="colorAccent">?attr/colorPrimaryVariant</item>
     </style>
 
     <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
@@ -129,21 +130,21 @@
         // yep, that helped to skip collapsed state at initial
         <item name="behavior_hideable">true</item>
         <item name="android:windowIsFloating">false</item>
-        <item name="colorAccent">?attr/colorPrimary</item>
+        <item name="colorAccent">?attr/colorPrimaryVariant</item>
     </style>
 
     <style name="TextDetail">
         <item name="android:gravity">center</item>
         <item name="android:padding">@dimen/_5sdp</item>
         <item name="android:background">@drawable/bg_edittext</item>
-        <item name="android:textColor">@color/orange</item>
+        <item name="android:textColor">?attr/colorPrimaryVariant</item>
         <item name="android:textSize">@dimen/_10sdp</item>
     </style>
 
     <style name="TextDetailTitle">
         <item name="android:padding">@dimen/_5sdp</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/orange</item>
+        <item name="android:textColor">?attr/colorPrimaryVariant</item>
         <item name="android:textSize">@dimen/_12sdp</item>
     </style>
 </resources>
